The Solr Reference branch. A Solr fork geared towards scalability and performance.